--- a/templates/admin/main.html
+++ b/templates/admin/main.html
@@ -35,6 +35,9 @@
                                                 <a class="nav-link" href="/master/tags/">Tags</a>
                                             </li>
                                             <li class="nav-item">
+                                                <a class="nav-link" href="/master/init-db/">Init DB</a>
+                                            </li>
+                                            <li class="nav-item">
                                                 <a class="nav-link" href="/">UI</a>
                                             </li>
                                         </ul>
