--- a/templates/admin/main.html
+++ b/templates/admin/main.html
@@ -58,5 +58,6 @@
                 <div class="col-lg-2 d-none d-lg-block"></div>
             </div>
         </div>
+        <script src="/js/bootstrap.min.js"></script>
     </body>
 </html>
