--- a/templates/admin/posts.html
+++ b/templates/admin/posts.html
@@ -19,4 +19,11 @@
         </tr>
         % end
     </table>
+    <div class="row">
+        <div class="col">
+            <nav class="mt-3 float-end">
+                {{ !paginator }}
+            </nav>
+        </div>
+    </div>
 </div>
