--- a/templates/common/paginator.html
+++ b/templates/common/paginator.html
@@ -1,31 +1,41 @@
 <ul class="pagination">
     <li class="page-item {{ 'disabled' if page == 1 else '' }}">
-        <a class="page-link" href="/?page={{ page - 1 }}">&laquo;</a>
+        <a class="page-link text-dark" href="?page={{ page - 1 }}">&laquo;</a>
     </li>
     % if page != 1:
     <li class="page-item">
-        <a class="page-link" href="/?page=1">1</a>
+        <a class="page-link text-dark" href="?page=1">1</a>
+    </li>
+    % end
+    % if page - 1 > 2:
+    <li class="page-item disabled">
+        <span class="page-link text-dark">...</span>
     </li>
     % end
     % if page - 1 > 1:
-    <li class="page-item disabled">
-        <span class="page-link">...</span>
+    <li class="page-item">
+        <a class="page-link text-dark" href="?page={{ page - 1 }}">{{ page - 1 }}</a>
     </li>
     % end
     <li class="page-item active" aria-current="page">
-        <span class="page-link">{{ page }}</span>
+        <span class="page-link bg-dark">{{ page }}</span>
     </li>
     % if pages_count - page > 1:
+    <li class="page-item">
+        <a class="page-link text-dark" href="?page={{ page + 1 }}">{{ page + 1 }}</a>
+    </li>
+    % end
+    % if pages_count - page > 2:
     <li class="page-item disabled">
-        <span class="page-link">...</span>
+        <span class="page-link text-dark">...</span>
     </li>
     % end
     % if page != pages_count:
     <li class="page-item">
-        <a class="page-link" href="/?page={{ pages_count }}">{{ pages_count }}</a>
+        <a class="page-link text-dark" href="?page={{ pages_count }}">{{ pages_count }}</a>
     </li>
     % end
     <li class="page-item {{ 'disabled' if page + 1 > pages_count else '' }}">
-        <a class="page-link" href="/?page={{ page + 1 }}">&raquo;</a>
+        <a class="page-link text-dark" href="?page={{ page + 1 }}">&raquo;</a>
     </li>
 </ul>
