--- a/templates/posts.html
+++ b/templates/posts.html
@@ -24,6 +24,7 @@
 <div class="row">
     <div class="col">
         <nav class="mt-3 float-end">
+            {{ !paginator }}
         </nav>
     </div>
 </div>
