feat(bottle): added post detail view. Introduced template rebasing

--- a/templates/admin/main.html
+++ b/templates/admin/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Admin</title>
+        <title>Admin | {{ title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link rel="icon" type="image/x-icon" href="/img/favico.png">
@@ -52,7 +52,7 @@
                         </nav>
                     </div>
                     <div class="row p-3 ps-0 pe-0">
-                        {{ !body }}
+                        {{ !base }}
                     </div>
                 </div>
                 <div class="col-lg-2 d-none d-lg-block"></div>
