--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,7 +1,9 @@
+% rebase('base.html', title='', search_term=search_term)
+
 % for post in posts:
     <div class="card border-0 bg-light mt-3">
         <div class="card-body pe-0 ps-0 pb-0">
-            <h5>{{ post["name"] }}</h5>
+            <h5><a href="/read/{{ post["id"] }}/">{{ post["name"] }}</a></h5>
             {{ !post["body"] }}
             <p class="text-end">
                 <span class="badge text-secondary align-bottom">
