--- a/templates/admin/posts.html
+++ b/templates/admin/posts.html
@@ -1,3 +1,5 @@
+% rebase("admin/main", title="Posts list")
+
 <div class="container">
     <div class="row mb-3">
         <div class="col-12 d-flex justify-content-between">
