--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Latest</title>
+    <title>{{ title or 'Posts | blog' }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="/img/favico.png">
 
@@ -60,7 +60,7 @@
                     </nav>
                 </div>
                 <div class="row">
-                    {{ !body }}
+                    {{ !base }}
                 </div>
             </div>
             <div class="col-lg-2 d-none d-lg-block"></div>
