--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,15 +1,15 @@
-% rebase('base.html', title='', search_term=search_term)
+% rebase('base.html', title='', search_term=get('search_term', ''))
 
 % for post in posts:
-    <div class="card border-0 bg-light mt-3">
+    <div class="card border-0 mt-3 bg-white">
         <div class="card-body pe-0 ps-0 pb-0">
-            <h5><a href="/read/{{ post["id"] }}/">{{ post["name"] }}</a></h5>
-            {{ !post["body"] }}
+            <h5><a href="/read/{{ post.id }}/">{{ post.name }}</a></h5>
+            {{ !post.formatted_body }}
             <p class="text-end">
                 <span class="badge text-secondary align-bottom">
                     <em>
                         <small>
-                            {{ post["publish_date"] }}
+                            {{ post.formatted_publish_date }}
                         </small>
                     </em>
                 </span>
