--- a/templates/admin/posts.html
+++ b/templates/admin/posts.html
@@ -12,11 +12,11 @@
     <table class="table table-striped table-hover">
         % for post in posts:
         <tr>
-            <td>{{ post["id"] }}</td>
-            <td>{{ post["name"] }}</td>
+            <td>{{ post.id }}</td>
+            <td>{{ post.name }}</td>
             <td class="text-end">
-                <a href="/master/post/{{ post['id'] }}/" class="link-success me-3">Edit</a>
-                <a href="/master/post/delete/{{ post['id'] }}/" class="link-success">Delete</a>
+                <a href="/master/post/{{ post.id }}/" class="link-success me-3">Edit</a>
+                <a href="/master/post/delete/{{ post.id }}/" onclick="return confirm('Sure to delete?')" class="link-success">Delete</a>
             </td>
         </tr>
         % end
