--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,9 @@
 
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/css/codehilite.css" rel="stylesheet" type="text/css">
+    <link href="/css/styles.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body class="bg-light">
     <div class="container container-lg">
         <div class="row">
             <div class="col-lg-2 d-none d-lg-block"></div>
@@ -59,7 +60,7 @@
                         </div>
                     </nav>
                 </div>
-                <div class="row">
+                <div class="row main-container">
                     {{ !base }}
                 </div>
             </div>
