--- a/static/css/codehilite.css
+++ b/static/css/codehilite.css
@@ -4,7 +4,7 @@ span.linenos { color: inherit; background-color: transparent; padding-left: 5px;
 td.linenos .special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
 span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
 .codehilite .hll { background-color: #ffffcc }
-.codehilite { background: rgb(248, 249, 250); padding: 25px; border-radius: 10px; margin-bottom: 1rem; }
+.codehilite { background: rgb(248, 249, 250); padding: 25px 0; border-radius: 10px; margin-bottom: 1rem; }
 .codehilite .c { color: #3D7B7B; font-style: italic } /* Comment */
 .codehilite .err { border: 1px solid #FF0000 } /* Error */
 .codehilite .k { color: #008000; font-weight: bold } /* Keyword */
