--- a/templates/admin/main.html
+++ b/templates/admin/main.html
@@ -35,6 +35,9 @@
                                                 <a class="nav-link" href="/master/tags/">Tags</a>
                                             </li>
                                             <li class="nav-item">
+                                                <a class="nav-link" href="/master/users/">Users</a>
+                                            </li>
+                                            <li class="nav-item">
                                                 <a class="nav-link" href="/master/init-db/">Init DB</a>
                                             </li>
                                             <li class="nav-item">
@@ -43,7 +46,10 @@
                                         </ul>
                                         <ul class="navbar-nav">
                                             <li class="nav-item">
-                                                <a class="nav-link" href="/master/logout/">Logout</a>
+                                                <span class="nav-link">Hello, {{ username() }}!</span>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" href="/master/logout/">(Logout)</a>
                                             </li>
                                         </ul>
                                     </div>
